src/test/deca/context/valid/notprovided/UnaryMinus.deca
{
float x =2.2;
float y;
y=-x;
}