src/test/deca/context/invalid/unary_op.deca
{
int x = -0x0.2p22; 
}